--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>GOING AGAIN</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="Even-better/css/styles.css">
   </head>
   <body>
     <table cellspacing="20">
