--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>GOING AGAIN</title>
-    <link rel="stylesheet" href="Even-better/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <table cellspacing="20">
