--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>GOING AGAIN</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="Even-better/CSS/styles.css">
   </head>
   <body>
     <table cellspacing="20">
